increased go-kart animation speed + center last frame of 1st animation + go-kart left side cutoff fixed

--- a/css/style.css
+++ b/css/style.css
@@ -687,7 +687,7 @@ input[type="checkbox"]:checked + label span{
 	position: absolute;
 	animation: car_animation 2s linear 1; 
 	width: 100%;
-	margin-left: -180px;
+	margin-left: -50%;
 	top: calc(100% - 240px);
 }
 
@@ -696,7 +696,7 @@ input[type="checkbox"]:checked + label span{
 	display: none;
 	/* animation: car_animation 2s linear 1; */
 	width: 100%;
-	margin-left: -180px;
+	margin-left: -50%;
 	top: calc(100% - 240px);	
 }
 
